# Code-Lab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  ML_Outline.md  Makefile  README.md  ROADMAP.md  prompt.md  pyproject.toml
artifacts/deepml/full/: 141.json  142.json  143.json  144.json  145.json  146.json  147.json  148.json  149.json  15.json  150.json  151.json  152.json  153.json  154.json  155.json  156.json  157.json  158.json  159.json  16.json  160.json  161.json  162.json  163.json  164.json  165.json  166.json  167.json  168.json  169.json  17.json  170.json  171.json
docs/ai-agents/assessments/: README.md
docs/ai-agents/capstones/: README.md
docs/ai-agents/evaluation/: README.md
docs/ai-agents/guardrails/: README.md
docs/ai-agents/multi-agent/: README.md
docs/ai-agents/observability/: README.md
docs/ai-agents/overview/: README.md
docs/ai-agents/planning/: README.md
docs/ai-agents/prompting/: README.md
docs/ai-agents/rag/: README.md
docs/ai-agents/tool-use/: README.md
docs/ai-agents/workflows/: README.md
docs/databases/: README.md
docs/databases/caching/: overview.md
docs/databases/indexing/: overview.md
docs/databases/nosql/: overview.md
docs/databases/query-plans/: overview.md
docs/databases/relational/: overview.md
docs/databases/schema-design/: overview.md
docs/ml/: README.md
docs/software-engineering/: README.md
scripts/: new_module.sh  new_problem.sh  run_py.sh  run_rust.sh
templates/module/: README.md
templates/problem/: README.md  meta.json  problem.md
web/: README.md  package.json  pnpm-lock.yaml
(+3007 files in other folders)
